--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Oyku\\anaconda3\\envs\\462project\\python.exe"
+    "python.pythonPath": "C:\\Users\\Asus\\anaconda3\\envs\\462project\\python.exe"
 }
